globus-gridmap-verify-myproxy-callout (2.9-1+gt6.@distro@) @distro@; urgency=low

  * Update for el.5 openssl101e

 -- Globus Toolkit <support@globus.org>  Thu, 08 Sep 2016 15:35:37 -0400

globus-gridmap-verify-myproxy-callout (2.8-1+gt6.@distro@) @distro@; urgency=low

  * Update bug report URL

 -- Globus Toolkit <support@globus.org>  Sat, 20 Aug 2016 09:11:40 -0400

globus-gridmap-verify-myproxy-callout (2.7-1+gt6.@distro@) @distro@; urgency=low

  * GT-560: Verify sharing certs

 -- Globus Toolkit <support@globus.org>  Wed, 08 Oct 2014 16:59:59 -0500

globus-gridmap-verify-myproxy-callout (2.6-1+gt6.@distro@) @distro@; urgency=low

  * Add missing dependencies
  * Don't autoconf substitute conf file with no substitutions in it

 -- Globus Toolkit <support@globus.org>  Tue, 30 Sep 2014 08:46:57 -0400

globus-gridmap-verify-myproxy-callout (2.5-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:28 -0400

globus-gridmap-verify-myproxy-callout (2.4-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-gridmap-verify-myproxy-callout (2.4-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:43 -0400

globus-gridmap-verify-myproxy-callout (2.4-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:39 -0400

globus-gridmap-verify-myproxy-callout (2.3-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:28 -0400

globus-gridmap-verify-myproxy-callout (2.2-2+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:55 -0400
